--- a/templates/index_templates.html
+++ b/templates/index_templates.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -10,7 +9,17 @@
 	<h1><p style="text-align: center;">Templates for OI/XCPC</p></h1>
 	<a href="../index.html"><button>Back</button></a>
 	
-	<p><a href="./FastIO.html">Fast Input/Output</a></p>
+	<h4>Universal Templates</h4>
+	<p><a href="FastIO.html">Fast Input/Output</a></p>
+	<p><a href="modint.html">Mod Int</a></p>
 
+	<h4>Data Structure</h4>
+	<p><a href="fenwick.html">Fenwick Tree</a></p>
+	<p><a href="linear_basis.html">Linear Basis</a></p>
+	<p><a href="spares_table.html">Spares Table</a></p>
+
+	<h4>Flow</h4>
+	<p><a href="maxflow_dinic.html">Max Flow - Dinic</a></p>
+	<p><a href="mincost_maxflow.html">Min Cost Max Flow</a></p>
 </body>
 </html>
