--- a/templates/fenwick.html
+++ b/templates/fenwick.html
@@ -15,7 +15,7 @@
 
 <body>
 	<a href="index_templates.html"><button>Back</button></a>
-	<input type="button" onclick="copy();" value="点击复制"></input>
+	<input type="button" onclick="copy();" value="Copy"></input>
 <pre><code><textarea id="copy" cols="100" rows="50" readonly>
 template&lt;typename T&gt;
 struct BIT{
