--- a/templates/index_templates.html
+++ b/templates/index_templates.html
@@ -21,5 +21,8 @@
 	<h4>Flow</h4>
 	<p><a href="maxflow_dinic.html">Max Flow - Dinic</a></p>
 	<p><a href="mincost_maxflow.html">Min Cost Max Flow</a></p>
+
+	<h4>String</h4>
+	<p><a href="PAM.html">PAM</a></p>
 </body>
 </html>
