--- a/templates/FastIO.html
+++ b/templates/FastIO.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link href="../additional_files/pgmain.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="../additional_files/pgmain.min.css" rel="stylesheet" type="text/css"> -->
     <title>Fast Input/Output</title>
 </head>
 <body>
     <a href="index_templates.html"><button>Back</button></a>
-<pre>
+<pre><code>
 #include &lt;iostream&gt;
 namespace IO{
     #define BUFSIZE 20000000
@@ -48,7 +48,7 @@ namespace IO{
 }
 using IO::in;
 using IO::out;
-</pre>
+</code></pre>
 
 </body>
 </html>
