--- a/additional_files/reveal/plugin/highlight/monokai.css
+++ b/additional_files/reveal/plugin/highlight/monokai.css
@@ -5,52 +5,57 @@ Monokai style - ported by Luigi Maselli - http://grigio.org
   font-family: "consolas";
   src: url('./consolas.ttf');
 }
-
-html, body {
-    font-family: "consolas";
-}
-
 .hljs {
-  font-family: "consolas" !important; 
+/*  font-family: "consolas";*/
   display: block;
   overflow-x: auto;
   padding: 0.5em;
-  background: #272822;
-  color: #ddd;
+  background: #f5f5f5;
+  color: #000;
 }
-
-.hljs-tag,
-.hljs-keyword,
-.hljs-selector-tag,
-.hljs-literal,
-.hljs-strong,
-.hljs-name {
-  color: #f92672;
+.hljs-keyword {
+  font-weight: bold;
+  color: #008000;
 }
-
 .hljs-code {
-  font-family: "consolas";
   color: #66d9ef;
 }
-
 .hljs-class .hljs-title {
   color: white;
 }
-
-.hljs-attribute,
-.hljs-symbol,
-.hljs-regexp,
 .hljs-link {
   color: #bf79db;
 }
-
-.hljs-string,
+.hljs-string {
+  color: #B00040;
+}
+.hljs-title {
+  color: #0000FF;
+}
+.hljs-number{
+  color: #666666;
+}
+.hljs-type {
+  color: #B00040;
+}
+.hljs-template-variable {
+  color: #0000FF;
+}
+.hljs-meta {
+  color: #75715e;
+}
+.hljs-tag,
+.hljs-selector-tag,
+.hljs-literal,
+.hljs-strong,
+.hljs-name,
 .hljs-bullet,
 .hljs-subst,
-.hljs-title,
+.hljs-attribute,
+.hljs-symbol,
+.hljs-regexp,
 .hljs-section,
 .hljs-emphasis,
-.hljs-type,
 .hljs-built_in,
 .hljs-builtin-name,
 .hljs-selector-attr,
@@ -58,17 +63,9 @@ html, body {
 .hljs-addition,
 .hljs-variable,
 .hljs-template-tag,
-.hljs-template-variable {
-  color: #a6e22e;
-}
-
 .hljs-comment,
 .hljs-quote,
 .hljs-deletion,
-.hljs-meta {
-  color: #75715e;
-}
-
 .hljs-keyword,
 .hljs-selector-tag,
 .hljs-literal,
@@ -76,6 +73,4 @@ html, body {
 .hljs-title,
 .hljs-section,
 .hljs-type,
-.hljs-selector-id {
-  font-weight: bold;
-}
+.hljs-selector-id,
