--- a/additional_files/reveal/theme/white.css
+++ b/additional_files/reveal/theme/white.css
@@ -1,359 +1,449 @@
 /**
- * White theme for reveal.js. This is the opposite of the 'black' theme.
+ * A simple theme for reveal.js presentations, similar
+ * to the default theme. The accent color is darkblue.
  *
- * By Hakim El Hattab, http://hakim.se
+ * This theme is Copyright (C) 2012 Owen Versteeg, https://github.com/StereotypicalApps. It is MIT licensed.
+ * reveal.js is Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
-@import url(./fonts/source-sans-pro/source-sans-pro.css);
-section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
-  color: #fff;
-}
-
-/*********************************************
- * GLOBAL STYLES
- *********************************************/
-:root {
-  --r-background-color: #fff;
-  --r-main-font: Source Sans Pro, Helvetica, sans-serif;
-  --r-main-font-size: 42px;
-  --r-main-color: #222;
-  --r-block-margin: 20px;
-  --r-heading-margin: 0 0 20px 0;
-  --r-heading-font: Source Sans Pro, Helvetica, sans-serif;
-  --r-heading-color: #222;
-  --r-heading-line-height: 1.2;
-  --r-heading-letter-spacing: normal;
-  --r-heading-text-transform: uppercase;
-  --r-heading-text-shadow: none;
-  --r-heading-font-weight: 600;
-  --r-heading1-text-shadow: none;
-  --r-heading1-size: 2.5em;
-  --r-heading2-size: 1.6em;
-  --r-heading3-size: 1.3em;
-  --r-heading4-size: 1em;
-  --r-code-font: consolas;
-  --r-link-color: #2a76dd;
-  --r-link-color-dark: #1a53a1;
-  --r-link-color-hover: #6ca0e8;
-  --r-selection-background-color: #98bdef;
-  --r-selection-color: #fff;
-  --r-overlay-element-bg-color: 0, 0, 0;
-  --r-overlay-element-fg-color: 240, 240, 240;
-}
-
-.reveal-viewport {
-  background: #fff;
-  background-color: var(--r-background-color);
-}
-
-.reveal {
-  font-family: var(--r-main-font);
-  font-size: var(--r-main-font-size);
-  font-weight: normal;
-  color: var(--r-main-color);
-}
-
-.reveal ::selection {
-  color: var(--r-selection-color);
-  background: var(--r-selection-background-color);
-  text-shadow: none;
-}
-
-.reveal ::-moz-selection {
-  color: var(--r-selection-color);
-  background: var(--r-selection-background-color);
-  text-shadow: none;
-}
-
-.reveal .slides section,
-.reveal .slides section > section {
-  line-height: 1.3;
-  font-weight: inherit;
-}
-
-/*********************************************
- * HEADERS
- *********************************************/
-.reveal h1,
-.reveal h2,
-.reveal h3,
-.reveal h4,
-.reveal h5,
-.reveal h6 {
-  margin: var(--r-heading-margin);
-  color: var(--r-heading-color);
-  font-family: var(--r-heading-font);
-  font-weight: var(--r-heading-font-weight);
-  line-height: var(--r-heading-line-height);
-  letter-spacing: var(--r-heading-letter-spacing);
-  text-transform: var(--r-heading-text-transform);
-  text-shadow: var(--r-heading-text-shadow);
-  word-wrap: break-word;
-}
-
-.reveal h1 {
-  font-size: var(--r-heading1-size);
-}
-
-.reveal h2 {
-  font-size: var(--r-heading2-size);
-}
-
-.reveal h3 {
-  font-size: var(--r-heading3-size);
-}
-
-.reveal h4 {
-  font-size: var(--r-heading4-size);
-}
-
-.reveal h1 {
-  text-shadow: var(--r-heading1-text-shadow);
-}
-
-/*********************************************
- * OTHER
- *********************************************/
-.reveal p {
-  margin: var(--r-block-margin) 0;
-  line-height: 1.3;
-}
-
-/* Remove trailing margins after titles */
-.reveal h1:last-child,
-.reveal h2:last-child,
-.reveal h3:last-child,
-.reveal h4:last-child,
-.reveal h5:last-child,
-.reveal h6:last-child {
-  margin-bottom: 0;
-}
-
-/* Ensure certain elements are never larger than the slide itself */
-.reveal img,
-.reveal video,
-.reveal iframe {
-  max-width: 95%;
-  max-height: 95%;
-}
-
-.reveal strong,
-.reveal b {
-  font-weight: bold;
-}
-
-.reveal em {
-  font-style: italic;
-}
-
-.reveal ol,
-.reveal dl,
-.reveal ul {
-  display: inline-block;
-  text-align: left;
-  margin: 0 0 0 1em;
-}
-
-.reveal ol {
-  list-style-type: decimal;
-}
-
-.reveal ul {
-  list-style-type: disc;
-}
-
-.reveal ul ul {
-  list-style-type: square;
-}
-
-.reveal ul ul ul {
-  list-style-type: circle;
-}
-
-.reveal ul ul,
-.reveal ul ol,
-.reveal ol ol,
-.reveal ol ul {
-  display: block;
-  margin-left: 40px;
-}
-
-.reveal dt {
-  font-weight: bold;
-}
-
-.reveal dd {
-  margin-left: 40px;
-}
-
-.reveal blockquote {
-  display: block;
-  position: relative;
-  width: 70%;
-  margin: var(--r-block-margin) auto;
-  padding: 5px;
-  font-style: italic;
-  background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
-}
-
-.reveal blockquote p:first-child,
-.reveal blockquote p:last-child {
-  display: inline-block;
-}
-
-.reveal q {
-  font-style: italic;
-}
-
-.reveal pre {
-  display: block;
-  position: relative;
-  width: 90%;
-  margin: var(--r-block-margin) auto;
-  text-align: left;
-  font-size: 0.55em;
-  font-family: var(--r-code-font);
-  line-height: 1.2em;
-  word-wrap: break-word;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
-}
-
-.reveal code {
-  font-family: var(--r-code-font);
-  text-transform: none;
-  tab-size: 2;
-}
-
-.reveal pre code {
-  display: block;
-  padding: 5px;
-  overflow: auto;
-  max-height: 400px;
-  word-wrap: normal;
-}
-
-.reveal .code-wrapper {
-  white-space: normal;
-}
-
-.reveal .code-wrapper code {
-  white-space: pre;
-}
-
-.reveal table {
-  margin: auto;
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-.reveal table th {
-  font-weight: bold;
-}
-
-.reveal table th,
-.reveal table td {
-  text-align: left;
-  padding: 0.2em 0.5em 0.2em 0.5em;
-  border-bottom: 1px solid;
-}
-
-.reveal table th[align=center],
-.reveal table td[align=center] {
-  text-align: center;
-}
-
-.reveal table th[align=right],
-.reveal table td[align=right] {
-  text-align: right;
-}
-
-.reveal table tbody tr:last-child th,
-.reveal table tbody tr:last-child td {
-  border-bottom: none;
-}
-
-.reveal sup {
-  vertical-align: super;
-  font-size: smaller;
-}
-
-.reveal sub {
-  vertical-align: sub;
-  font-size: smaller;
-}
-
-.reveal small {
-  display: inline-block;
-  font-size: 0.6em;
-  line-height: 1.2em;
-  vertical-align: top;
-}
-
-.reveal small * {
-  vertical-align: top;
-}
-
-.reveal img {
-  margin: var(--r-block-margin) 0;
-}
-
-/*********************************************
- * LINKS
- *********************************************/
-.reveal a {
-  color: var(--r-link-color);
-  text-decoration: none;
-  transition: color 0.15s ease;
-}
-
-.reveal a:hover {
-  color: var(--r-link-color-hover);
-  text-shadow: none;
-  border: none;
-}
-
-.reveal .roll span:after {
-  color: #fff;
-  background: var(--r-link-color-dark);
-}
-
-/*********************************************
- * Frame helper
- *********************************************/
-.reveal .r-frame {
-  border: 4px solid var(--r-main-color);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-}
-
-.reveal a .r-frame {
-  transition: all 0.15s linear;
-}
-
-.reveal a:hover .r-frame {
-  border-color: var(--r-link-color);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55);
-}
-
-/*********************************************
- * NAVIGATION CONTROLS
- *********************************************/
-.reveal .controls {
-  color: var(--r-link-color);
-}
-
-/*********************************************
- * PROGRESS BAR
- *********************************************/
-.reveal .progress {
-  background: rgba(0, 0, 0, 0.2);
-  color: var(--r-link-color);
-}
-
-/*********************************************
- * PRINT BACKGROUND
- *********************************************/
-@media print {
-  .backgrounds {
-    background-color: var(--r-background-color);
-  }
-}
+ @import url(https://fonts.googleapis.com/css?family=News+Cycle:400,700);
+ @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic);
+ section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
+   color: #fff; }
+ 
+ /*********************************************
+  * GLOBAL STYLES
+  *********************************************/
+ :root {
+   --background-color: #fff;
+   --main-font: Lato, sans-serif;
+   --main-font-size: 40px;
+   --main-color: #000;
+   --block-margin: 20px;
+   --heading-margin: 0 0 20px 0;
+   --heading-font: News Cycle, Impact, sans-serif;
+   --heading-color: #000;
+   --heading-line-height: 1.2;
+   --heading-letter-spacing: normal;
+   --heading-text-transform: none;
+   --heading-text-shadow: none;
+   --heading-font-weight: normal;
+   --heading1-text-shadow: none;
+   --heading1-size: 3.77em;
+   --heading2-size: 2.11em;
+   --heading3-size: 1.55em;
+   --heading4-size: 1em;
+   --code-font: monospace;
+   --link-color: #00008B;
+   --link-color-hover: #0000f1;
+   --selection-background-color: rgba(0, 0, 0, 0.99);
+   --selection-color: #fff; }
+ 
+ .reveal-viewport {
+   background: #fff;
+   background-color: #fff; }
+ 
+ .reveal {
+   font-family: "Lato", sans-serif;
+   font-size: 40px;
+   font-weight: normal;
+   color: #000; }
+ 
+ .reveal ::selection {
+   color: #fff;
+   background: rgba(0, 0, 0, 0.99);
+   text-shadow: none; }
+ 
+ .reveal ::-moz-selection {
+   color: #fff;
+   background: rgba(0, 0, 0, 0.99);
+   text-shadow: none; }
+ 
+ .reveal .slides section,
+ .reveal .slides section > section {
+   line-height: 1.3;
+   font-weight: inherit; }
+ 
+ /*********************************************
+  * HEADERS
+  *********************************************/
+ .reveal h1,
+ .reveal h2,
+ .reveal h3,
+ .reveal h4,
+ .reveal h5,
+ .reveal h6 {
+   margin: 0 0 20px 0;
+   color: #000;
+   font-family: "News Cycle", Impact, sans-serif;
+   font-weight: normal;
+   line-height: 1.2;
+   letter-spacing: normal;
+   text-transform: none;
+   text-shadow: none;
+   word-wrap: break-word; }
+ 
+ .reveal h1 {
+   font-size: 3.77em; }
+ 
+ .reveal h2 {
+   font-size: 2.11em; }
+ 
+ .reveal h3 {
+   font-size: 1.55em; }
+ 
+ .reveal h4 {
+   font-size: 1em; }
+ 
+ .reveal h1 {
+   text-shadow: none; }
+ 
+ /*********************************************
+  * OTHER
+  *********************************************/
+ .reveal p {
+   margin: 20px 0;
+   line-height: 1.3; }
+ 
+ /* Ensure certain elements are never larger than the slide itself */
+ .reveal img,
+ .reveal video,
+ .reveal iframe {
+   max-width: 95%;
+   max-height: 95%; }
+ 
+ .reveal strong,
+ .reveal b {
+   font-weight: bold; }
+ 
+ .reveal em {
+   font-style: italic; }
+ 
+ .reveal ol,
+ .reveal dl,
+ .reveal ul {
+   display: inline-block;
+   text-align: left;
+   margin: 0 0 0 1em; }
+ 
+ .reveal ol {
+   list-style-type: decimal; }
+ 
+ .reveal ul {
+   list-style-type: disc; }
+ 
+ .reveal ul ul {
+   list-style-type: square; }
+ 
+ .reveal ul ul ul {
+   list-style-type: circle; }
+ 
+ .reveal ul ul,
+ .reveal ul ol,
+ .reveal ol ol,
+ .reveal ol ul {
+   display: block;
+   margin-left: 10px; }
+ 
+ .reveal dt {
+   font-weight: bold; }
+ 
+ .reveal dd {
+   margin-left: 40px; }
+ 
+ .reveal blockquote {
+   display: block;
+   position: relative;
+   width: 90%;
+   margin: 20px auto;
+   padding: 5px;
+   background: rgba(0, 255, 255, 0.05);
+   border-radius: 10px;
+   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+ }
+ 
+ .reveal q {
+   font-style: italic; }
+ 
+ .reveal pre {
+   display: block;
+   position: relative;
+   width: 90%;
+   margin: 20px auto;
+   text-align: left;
+   font-size: 0.55em;
+   font-family: consolas;
+   line-height: 1.2em;
+   word-wrap: break-word;
+   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15); }
+ 
+ .reveal code {
+   font-family: consolas;
+   text-transform: none; }
+ 
+ .reveal pre code {
+   display: block;
+   padding: 5px;
+   overflow: auto;
+   max-height: 400px;
+   word-wrap: normal; }
+ 
+ .reveal table {
+   margin: auto;
+   border-collapse: collapse;
+   border-spacing: 0; }
+ 
+ .reveal table th {
+   font-weight: bold; }
+ 
+ .reveal table th,
+ .reveal table td {
+   text-align: left;
+   padding: 0.2em 0.5em 0.2em 0.5em;
+   border-bottom: 1px solid; }
+ 
+ .reveal table th[align="center"],
+ .reveal table td[align="center"] {
+   text-align: center; }
+ 
+ .reveal table th[align="right"],
+ .reveal table td[align="right"] {
+   text-align: right; }
+ 
+ .reveal table tbody tr:last-child th,
+ .reveal table tbody tr:last-child td {
+   border-bottom: none; }
+ 
+ .reveal sup {
+   vertical-align: super;
+   font-size: smaller; }
+ 
+ .reveal sub {
+   vertical-align: sub;
+   font-size: smaller; }
+ 
+ .reveal small {
+   display: inline-block;
+   font-size: 0.6em;
+   line-height: 1.2em;
+   vertical-align: top; }
+ 
+ .reveal small * {
+   vertical-align: top; }
+ 
+ .reveal img {
+   margin: 20px 0; }
+ 
+ /*********************************************
+  * LINKS
+  *********************************************/
+ .reveal a {
+   color: #00008B;
+   text-decoration: none;
+   transition: color .15s ease; }
+ 
+ .reveal a:hover {
+   color: #0000f1;
+   text-shadow: none;
+   border: none; }
+ 
+ .reveal .roll span:after {
+   color: #fff;
+   background: #00003f; }
+ 
+ /*********************************************
+  * Frame helper
+  *********************************************/
+ .reveal .r-frame {
+   border: 4px solid #000;
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+ 
+ .reveal a .r-frame {
+   transition: all .15s linear; }
+ 
+ .reveal a:hover .r-frame {
+   border-color: #00008B;
+   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
+ 
+ /*********************************************
+  * NAVIGATION CONTROLS
+  *********************************************/
+ .reveal .controls {
+   color: #00008B; }
+ 
+ /*********************************************
+  * PROGRESS BAR
+  *********************************************/
+ .reveal .progress {
+   background: rgba(0, 0, 0, 0.2);
+   color: #00008B; }
+ 
+ /*********************************************
+  * PRINT BACKGROUND
+  *********************************************/
+ @media print {
+   .backgrounds {
+     background-color: #fff; } }
+ 
+     .reveal .slide-number {
+      font-size: 26px;
+      border-radius: 5px;
+      background-color: rgba(0, 0, 0, .3);
+    }
+    
+    .reveal .full-screen {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
+    
+    .reveal .slides {
+      border: 1.5px #ddd solid;
+      border-radius: 7px;
+      text-align: left;
+      font-weight: 300;
+    }
+    
+    .reveal h1, .reveal h2, .reveal h3, .reveal h4 {
+      font-family: 'Lato', 'SimHei', 'STXihei', 'Droid Sans';
+      font-weight: 400;
+    }
+    
+    .reveal p, .reveal li, .reveal center {
+      font-size: 32px;
+      font-family: 'Lato', 'STHeiti', 'SimHei', 'Droid Sans';
+    }
+    
+    .reveal li + li {
+      margin-top: 10px;
+    }
+    
+    .reveal ul {
+      display: block;
+      margin-right: 15px;
+    }
+    
+    .reveal p, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5 {
+      padding:  0 25px 0 25px;
+    }
+    
+    .reveal table {
+      font-size: 32px;
+      font-family: 'Lato', 'STHeiti', 'SimHei', 'Sans Serif';
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+    
+    .reveal th {
+      background-color: #eee;
+    }
+    
+    .reveal tr:nth-child(even) {
+      background-color: #efffff;
+    }
+    
+    .reveal h1,
+    .reveal h2,
+    .reveal h3,
+    .reveal h4,
+    .reveal h5,
+    .reveal h6 {
+      text-align: left;
+      margin: 0 0 20px 0;
+     color: #222; 
+      font-weight: 400;
+      line-height: 1.2;
+      letter-spacing: normal;
+    }
+    
+    
+    
+    .reveal h1 {
+      padding-top: 4em;
+      margin: 0 10 0 10;
+      font-size: 60px;
+      text-align: center;
+    }
+    .reveal .middle h1 {
+      text-align: center;
+    }
+    
+    .reveal h2 {
+      font-size: 48px;
+      border-bottom: 2px solid rgb(106, 0, 95);
+      padding-bottom: 5px;
+      margin-top: 0.4em
+    }
+    .reveal h3 { font-size: 1.15em; }
+    .reveal h4 { font-size: 1.05em; }
+    
+    .reveal .center {
+      text-align: center;
+    }
+    
+    .reveal .middle {
+      height: 728px;
+      display: flex;
+      align-items: center;
+      width: 100%;
+    }
+    
+    .reveal pre {
+      font-size: 28px;
+     
+      background-color: #eee;
+    
+      border-radius: 3mm;
+      padding: 10px 10px 10px 10px;
+    }
+    
+    .reveal pre code {
+      max-height: none;
+    }
+    
+    
+    .reveal .middle blockquote {
+      text-align: center;
+      color: rgb(106, 0, 95);
+      background: none;
+      box-shadow: none;
+    }
+    
+    .reveal .middle blockquote a {
+      color: inherit;
+    }
+    
+    .reveal blockquote p, .reveal blockquote li {
+      font-family: 'Lato', 'AR PL Ukai CN', 'STKaiti', 'KaiTi', 'Sans Serif';
+    }
+    
+    section .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    
+    .reveal .author-block {
+      margin: 75px 0 35px 0;
+    }
+    .reveal .author-affiliation img {
+      margin: 15px 0 0 0;
+    }
+    .reveal .author-block p, .reveal .author-affiliation p  {
+      font-family: 'Kaiti', 'STKaiti', 'Serif', 'Times', 'Times New Roman';
+      margin-block-start: 0em;
+      margin-block-end: 0em;
+    }
+    .reveal .author-affiliation {
+      display: inline-block;
+      font-size: 90%;
+    }
+    .reveal hr {
+      border: 10px solid rgba(0, 0, 0, 0);
+    }
+    .reveal li {
+      margin-top: 10px;
+    }
